@@ -1,4 +1,4 @@
-VERSION = 1.1
+VERSION = 1.2
 
 pdumpfs: pdumpfs.in
 	rm -f pdumpfs
