@@ -831,9 +831,10 @@ module Pdumpfs
       else
         recursive_copy(src, today)
       end
+      return if @dry_run
 
       elapsed = Time.now - start_time
-      add_log_entry(src, today, elapsed) unless @dry_run
+      add_log_entry(src, today, elapsed) 
     end
 
     def convert_bytes (bytes)
@@ -1073,8 +1074,7 @@ module Pdumpfs
 end
 
 def usage
-  puts "Usage: pdumpfs <source directory> <destination directory>"+
-       " [destination basename]"
+  puts "Usage: pdumpfs SRC DEST [BASE]"
   puts "  -e, --exclude=PATTERN          exclude files/directories matching PATTERN"
   puts "  -s, --exclude-by-size=SIZE     exclude files larger than SIZE"
   puts "  -w, --exclude-by-glob=GLOB     exclude files matching GLOB"
