@@ -1,5 +1,7 @@
 2004-08-10  Satoru Takabayashi  <satoru@namazu.org>
 
+	* Makefile (VERSION): Bumped version number to 1.2.
+
 	* pdumpfs.in (parse_options): New option: --dry-run (-n).
 	(Pdumpfs::Pdumpfs::initialize): New field: @dry_run.
 	(Pdumpfs::Pdumpfs::update_file): Simplified.
